# tensorcraft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/actions/: codebase_tests.yaml
.github/actions/codebase_tests/: action.yaml
.github/workflows/: pr.yaml  push_main.yaml  run_tests.yaml
experiments/redist-bench/jax/: README.md
experiments/redist-bench/jax/scripts/: alltoall.py  mpi_setup.py
notebooks/: basic_algorithms.ipynb  comp_dist.ipynb  compiler_basics.ipynb  mpi_utils.ipynb  op_viz.ipynb  optim.ipynb  redist_optim.ipynb  redistributions.ipynb  viz_basics.ipynb
notebooks/mpi/: mad_mpi.ipynb  mpi_2D_3D_mm.ipynb  propulate_redist.ipynb
scripts/: mpi_bigint.py  non_contiguous_mpi.py  propulate_redist.py
tensorcraft/: __init__.py  __main__.py  logging.py  shape.py  tensor.py  types.py  util.py  viz.py
tensorcraft/compiler/: __init__.py  compiler.py  grammar.lark  model.py  util.py
tensorcraft/distributions/: __init__.py  block.py  dist.py  multi_axis.py  pmesh.py  slab.py  tile.py  util.py
tensorcraft/mpi/: __init__.py  mpi_utils.py
tensorcraft/mpi/distributions/: __init__.py  multi_axis_dist.py
tensorcraft/mpi4torch/: __init__.py  util.py
tensorcraft/ops/: __init__.py  ops.py
tensorcraft/optim/: __init__.py
tensorcraft/optim/cost/: __init__.py  cost_model.py  ideal_lower_bound.py
tensorcraft/optim/ops/: static_large_optim.py  tensor_exp_optim.py
tensorcraft/optim/programm/: __init__.py
tensorcraft/optim/redistribution/: __init__.py  a_star.py  mem_const.py  naive_gatherer.py  redistributer.py  redistributor.py
tensorcraft/optim/tensor_expression/: __init__.py
tensorcraft/util/: __init__.py  axis_utils.py  mpi_utils.py  route_finder.py
tensorcraft/viz/: __init__.py  mesh_2d.py  mesh_3d.py  ops.py  program_graph.py  tensor_2d.py  tensor_3d.py  util.py
tests/: __init__.py  conftest.py
tests/tensorcraft/: test_shape.py  test_tensor.py  test_util.py
tests/tensorcraft/compiler/: test_compiler.py
tests/tensorcraft/distributions/: test_dist.py  test_multi_axis.py
tests/tensorcraft/mpi/: test_mpi_utils.py
tests/tensorcraft/mpi/distributions/: test_mpi_multiaxisdist.py
tests/tensorcraft/mpi4py/: test_util.py
tests/tensorcraft/util/: test_axis_utils.py  test_mpi_utils.py
