[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensorcraft"
version = "0.0.1"
description = "A collection of tools for optimizing and visualizing distributed tensor algorithms."
authors = [
    {name = "Gutiérrez Hermosillo Muriedas, Juan Pedro", email = "juanpedroghm@gmail.com"},
]
maintainers = [
    {name = "Gutiérrez Hermosillo Muriedas, Juan Pedro", email = "juanpedroghm@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["distributed", "tensors", "visualization", "optimization", "algorithms", "mpi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed"
]

requires-python = ">=3.10"

dependencies = [
    "numpy",
    "lark",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]
notebook = ["ipython", "ipyml"]
dev = [
    # Testing
    "pytest",
    "hypothesis[numpy]<6.100",
    "pytest-coverage",

    # QA
    "pre-commit",

    # Releases and changelogs
    "python-semantic-release>=9.0.0",

    # Interactive stuff
    "ipykernel",
    "ipympl",
]

[project.urls]
Homepage = "https://github.com/Helmholtz-AI-Energy/tensorcraft"
# Documentation = "https://tensorcraft.readthedocs.io"
Repository = "https://github.com/Helmholtz-AI-Energy/tensorcraft"
Issues = "https://github.com/Helmholtz-AI-Energy/tensorcraft/issues"
Changelog = "https://github.com/Helmholtz-AI-Energy/tensorcraft/blob/main/CHANGELOG.md"

# Ruff
[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true


# Semantic release
[tool.semantic_release]
version_variables = [ "tensorcraft/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version} [skip ci]"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '\d+\.\d+\.\d+ \[skip ci\]',
]

[tool.semantic_release.branches.test]
match = "release-test"
prerelease = true

[tool.semantic_release.branches.release]
match = "release"
prerelease = false

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report term"

[tool.coverage.run]
source = ["tensorcraft"]

[tool.coverage.report]
format = "markdown"
